# fizzbuzz-rust-vercel-functions

./: Cargo.toml  vercel.json
api/: handler.rs
src/: lib.rs
